--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ buildscript {
 
     }
 }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.1'
+    }
 }
 task clean(type: Delete) {
     delete rootProject.buildDir
